WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129995
Short-circuit JSGlobalObjectInspectorController when not inspecting.
https://bugs.webkit.org/show_bug.cgi?id=129995
Summary
Short-circuit JSGlobalObjectInspectorController when not inspecting.
Andreas Kling
Reported
2014-03-09 16:36:44 PDT
We're hitting symbolication pretty hard below JSGlobalObjectInspectorController::reportAPIException() on DYEB.
Attachments
Patch
(1.52 KB, patch)
2014-03-09 16:37 PDT
,
Andreas Kling
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-03-09 16:37:13 PDT
Created
attachment 226261
[details]
Patch
Geoffrey Garen
Comment 2
2014-03-09 17:39:59 PDT
Comment on
attachment 226261
[details]
Patch Should we check m_consoleAgent->enabled() instead? That seems a little closer to the code we're guarding.
Andreas Kling
Comment 3
2014-03-09 18:42:49 PDT
(In reply to
comment #2
)
> (From update of
attachment 226261
[details]
) > Should we check m_consoleAgent->enabled() instead? That seems a little closer to the code we're guarding.
SGTM. I'll land with that change :)
Andreas Kling
Comment 4
2014-03-09 18:51:57 PDT
Committed
r165357
: <
http://trac.webkit.org/changeset/165357
>
Joseph Pecoraro
Comment 5
2014-03-10 10:22:46 PDT
How were you actually seeing this in DYEB? Any backtrace would do. reportAPIException is supposed to be used for JSC API exceptions. If we are triggering this frequently, is it on purpose or is it something we are doing in WebCore / Browser level that triggers an exception that we could avoid?
Joseph Pecoraro
Comment 6
2014-03-12 01:16:28 PDT
(In reply to
comment #5
)
> How were you actually seeing this in DYEB? Any backtrace would do.
Did we find out what the exception actually was?
Andreas Kling
Comment 7
2014-03-13 16:52:24 PDT
(In reply to
comment #6
)
> (In reply to
comment #5
) > > How were you actually seeing this in DYEB? Any backtrace would do. > > Did we find out what the exception actually was?
Nope. :| Rolled this out in <
https://trac.webkit.org/r165575
> since now I can't get an exception to show up anymore.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug