Short-circuit JSGlobalObjectInspectorController when not inspecting. <https://webkit.org/b/129995>

Add an early return in reportAPIException() when the console agent
is disabled. This avoids expensive symbolication during exceptions
if there's nobody expecting the fancy backtrace anyway.

~2% progression on DYEB on my MBP.

Reviewed by Geoff Garen.

* inspector/JSGlobalObjectInspectorController.cpp:
(Inspector::JSGlobalObjectInspectorController::reportAPIException):

Canonical link: https://commits.webkit.org/147983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165357 268f45cc-cd09-0410-ab3c-d52691b4dbfc